fix on mobile

--- a/app/static/styles/global.css
+++ b/app/static/styles/global.css
@@ -24,7 +24,6 @@ a:visited {
   flex-direction: column;
   font-family: Arial, sans-serif;
   height: 100%;
-  overflow: hidden;
 }
 
 body {
@@ -37,7 +36,6 @@ body {
   background-color: rgba(255, 255, 255, 0.85);
   background-blend-mode: lighten;
   padding: 0;
-  min-height: 100vh;
   margin: 0;
 }
 
